final changes to mediaSmall.css chorme horizontal scroll bug solved -5.0

--- a/css/mediaSmall.css
+++ b/css/mediaSmall.css
@@ -8,7 +8,7 @@
     display:flex;
     /* flex-direction: row; */
     flex-direction: column;
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
     /* width:100vw; */
 }
 /* .outside #restaurant-content {
@@ -20,15 +20,15 @@
     /* flex-direction: row; */
     flex-direction: column;
     /* justify-content:space-around; */
-
-    /* width: 100vw; */
+/* mod 1 */
+    width: 100vw;
     /* position: relative; */
     /* flex-wrap: wrap; */
     /* align-items: flex-start; */
     /* align-items:center; EDITED FOR FOOTER IT LEAVES GAP */
     justify-content: flex-start;
     /* BELOW IS ADDED TO HIDE HORIZONTAL SCROLL  */
-    overflow-x: hidden;
+    /* overflow-x: hidden; */
 
 }
 #restaurant-container,
@@ -60,8 +60,9 @@
   } */
 .inside header{
     order: 0;
-    /* width:100vw; */
-    width:100%;
+    /* mod 2 */
+    width:100vw;
+    /* width:100%; */
 
 }
 #breadcrumb li {
@@ -80,8 +81,9 @@
     top: 130px;
     position: relative;
     height: 400px;
+    /* mod 3 */
     width: 100vw;
-    width: 100%;
+    /* width: 100%; */
 }
 /* .inside #restaurant-container,
 #reviews-list {
@@ -91,12 +93,16 @@ width: 100vw; */
 /* } */
 .inside #restaurant-container {
     order: 2;
-    flex-basis:100%;
+    /* Mod 4 */
+    width: 100vw;
+    /* flex-basis:100%; */
     flex-grow: 1;
 }
 .inside #reviews-container {
     order:3;
-    flex-basis:100%;
+    /* mod 5 */
+    width: 100vw;
+    /* flex-basis:100%; */
     flex-grow: 1;
 }
 #reviews-container {
@@ -153,9 +159,9 @@ flex-grow:2;
   /* flex-wrap: wrap; */
   /* align-items: center; */
   /* BELOW TO MAKE REVIEWS HEADING AT START */
-  align-items: flex-start;
-
-  margin:auto;
+  /* align-items: flex-start; */
+  align-items:center;
+  /* margin:auto; */
   }
   .inside #footer {
       order:4;
@@ -163,14 +169,19 @@ flex-grow:2;
       bottom:0;
      position: absolute;
      /* flex-basis:100% ; */
-     width: 100%;
+     /* mod 6 */
+     width: 100vw;
+     /* width: 100%; */
      /* flex: 2 0 100%; */
      /* flex:0 1 87%; */
      /* flex:0 1 auto; */
   }
-  /* #footer {
-      width:100%;
-  } */
+  #footer {
+      /* mod 7 */
+      padding-left:0;
+      padding-right: 0;
+      /* width:100%; */
+  }
 
   #restaurants-list {
       display: flex;
@@ -188,8 +199,17 @@ flex-grow:2;
   #reviews-list {
       display: flex;
       flex-flow: column;
-
+      /* mod 9 imp chrome bug */
+       padding-right: 0px;
+       margin:20px;
   }
+
+  /* mod 8 IMP CHROME BUG */
+#reviews-container{
+    padding-right: 0px;
+    padding-left: 0px;
+    margin-right: 0px;
+}
 
 /* ====================== Header ====================== */
 /* nav {
@@ -206,10 +226,13 @@ header nav{
 }
 header #breadcrumb {
     order:1;
-    /* width: 100vw; */
-    width: 100%;
+    /* mod 3 */
+    width: 100vw;
+    /* width: 100%; */
     line-height: 2.5;
     display: flex;
+    padding-left: 0;
+    padding-right: 0;
     /* flex-direction: column; */
     flex-flow: row nowrap;
     align-items: center;
